Fix layout issues

--- a/src/containers/Landing/Landing.css
+++ b/src/containers/Landing/Landing.css
@@ -13,6 +13,7 @@
   max-width: 980px;
   padding: 20px 40px;
   box-sizing: border-box;
+  overflow: scroll;
 }
 
 
